# TESC

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: eval_programming_bench.py  eval_programming_repair.py  make_ci_tables.py  programming_tests.py  run_programming_bench.py  run_programming_bench_sambanova.py  run_programming_repair.py  run_uncertainty_levels.py  sambanova_utils.py  semio_utils.py  tesc_dynamics_eval.py  tesc_uncertainty_eval.py
benchmarks/data/: programming_cases.jsonl
